@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST DBD-SQLite-0.31.tar.gz 357902 RMD160 283b4513727394fb8001ca4b4c41e017317b391c SHA1 f880a6bc672af98ee2e6272c81b874a7d850bd55 SHA256 d7317b19464b92e60949b8b7aebbaf6d9a0fc1ee32c77f687cda79db430dc4d5
 DIST DBD-SQLite-1.31.tar.gz 1325225 RMD160 ba69edded3363cabce9c2d7b758d9c8cef11bf2a SHA1 6c189fba1a4ec4b7e792b3c0b9c9020d5cf7cb8e SHA256 987e5446dea3dbdfb3aea5b27dbed8526af1733e3eb01ea59a6435ebba5b29f6
@@ -9,14 +9,14 @@ DIST DBD-SQLite-1.37.tar.gz 1515353 RMD160 714a5b2b59320791e467a38cd64a4027e9da6
 EBUILD DBD-SQLite-0.31-r1.ebuild 450 RMD160 9924e5d57137e1a76013e174a18bf9bff02ab664 SHA1 b17521549788634335bc80bf20e217c38d696483 SHA256 da4e20fbe400c0f6ceff51b79299b02beb1130f4198d9591fd2499a1cb34a015
 EBUILD DBD-SQLite-1.31.ebuild 979 RMD160 adde868001521cfa137dad71cb3961411316d1d4 SHA1 696d3c939883d2fd704c641db5070b845bc78f9b SHA256 3ca3d1a277a0b7bb710fd01c8e598537fd695176f39e10544bc7c04edcdb9dd6
 EBUILD DBD-SQLite-1.330.0.ebuild 1013 RMD160 df6e1ac5055f89895bc8ae440b8447405a468028 SHA1 db545b7b4250963fbc376833e9c2429fc4a6f445 SHA256 29ec469bc6520e4e0b17be5eebf81f1413a31c6fe2b0c5cd23b2f71c80b4457a
-EBUILD DBD-SQLite-1.350.0.ebuild 1023 RMD160 8403cb08bff6efd7375beeb9e3b34ecc17523bd5 SHA1 3cae56faf051d314593bc1e892a85198ed6af72e SHA256 c97db568064ea37d3da213c55091e32cfc426286e0a0e9580638d60fb55e1636
+EBUILD DBD-SQLite-1.350.0.ebuild 1017 RMD160 5aa365cc1a866e62b30a53e3e3bd9eba98763533 SHA1 1e3d8af205e78a738f3fef8349799ca4965a66cf SHA256 9ac88f86e0175906fdb8d1809d09e632954cb2181a10bf3f9012420ceb5a4127
 EBUILD DBD-SQLite-1.370.0.ebuild 1032 RMD160 66e76bac2c90eff241f090729056a2a7a275402a SHA1 b8898e8ce31c23619bcc4f8eb127be6888047b9d SHA256 46a75c44242cab815eb31477f2f3873b93887bb205509a85f049ad0a5ad218b3
-MISC ChangeLog 13525 RMD160 04dde57b4e5beea55343f24d10cd7d86918e16fc SHA1 9088e9ab3fb3793676e1b45e693713bbc0b179ae SHA256 729cc3f71f747b014ebae1c7e3bd60c1247064880a5bb188d4fd31fa9a92f0ac
+MISC ChangeLog 13651 RMD160 73d19eac5a95385b28282774c6aa2c06f803fb9c SHA1 d4e010ec7677acfb68334036fb1dce65f3a7318d SHA256 893cbf9a9d05a28d52dcdee827cdcf970567acfc751e585a9957c79897673ce1
 MISC metadata.xml 236 RMD160 345e3943dc8d96dd124aab909c34bf03157ad700 SHA1 dfa234735533822e61912eeda51a632a28951667 SHA256 24f4faa0992358842a6f28593c3a3fc0876e805f5ace11fab341fb7b68b02a24
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk/UzGYACgkQV3J2n04Eauz6vQCglLojLO2VGp851wWYu5dIbSW4
-MLAAn2flMk7FbfLbbE8TktqfknhvLLg0
-=oI6u
+iEYEARECAAYFAk/d56gACgkQuQc30/atMkDLlQCghV44pPv75Yn8ZtZksGtaK1Kx
+jMIAn0LxZyIm2ada7yIBF3J5YkjG445k
+=ThAT
 -----END PGP SIGNATURE-----
