@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Email-Reply
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Reply/ChangeLog,v 1.21 2012/03/27 17:22:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Reply/ChangeLog,v 1.22 2012/06/17 14:15:54 armin76 Exp $
+
+  17 Jun 2012; Raúl Porcel <armin76@gentoo.org> Email-Reply-1.202.0.ebuild:
+  Drop alpha keywords
 
   27 Mar 2012; Raúl Porcel <armin76@gentoo.org> Email-Reply-1.202.0.ebuild:
   Drop ia64/sparc keywords
