@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-MIME-Attachment-Stripper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME-Attachment-Stripper/ChangeLog,v 1.30 2012/03/31 07:24:52 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME-Attachment-Stripper/ChangeLog,v 1.31 2012/06/17 14:17:08 armin76 Exp $
+
+  17 Jun 2012; Raúl Porcel <armin76@gentoo.org>
+  Email-MIME-Attachment-Stripper-1.316.0.ebuild:
+  Drop alpha keywords
 
   31 Mar 2012; Torsten Veller <tove@gentoo.org>
   -Email-MIME-Attachment-Stripper-1.313.ebuild,
